# covenant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE.md  README.md  RELEASES.md  ROADMAP.md  SECURITY-PGP-PUBLIC.asc  SECURITY.md  SUPPORT.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.madge.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_finding.yml
.github/workflows/: ci.yml  codeql.yml  security-scan.yml  workflow-security.yml
.well-known/: security.txt
apps/analytics/: package.json
apps/docs/: package.json  tsconfig.json
apps/portal/: .env.example  README.md  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  (+1 more)
circuits/: .gitignore  README.md  package-lock.json  package.json
contracts/: README.md  foundry.toml  package.json
docs/: getting-started.md
infra/: render.yaml
scripts/: audit.sh  bootstrap.sh  bundle-size.config.json  check-bundle-size.mjs  check-forbidden-public-identifiers.sh  export-base-artifacts.mjs  hash-guardian-config.mjs  hash-verification-key.mjs  install-hooks.sh  seed-base-network.mjs  verify-base-network.mjs  write-deployment-manifest.mjs
services/indexer/: .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
services/indexer/src/: api.rs  config.rs  main.rs  model.rs
(+145 files in other folders)
