[package]
name = "covenant-indexer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "covenant_indexer"
path = "src/lib.rs"

[[bin]]
name = "covenant-indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
